Closed Bug 433432 Opened 16 years ago Closed 16 years ago

Crashes in [@ -[ChildView processPluginKeyEvent:] ]

Categories

(Core :: Widget: Cocoa, defect)

x86
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla1.9

People

(Reporter: MatsPalmgren_bugz, Assigned: MatsPalmgren_bugz)

Details

(Keywords: fixed1.9.0, regression, topcrash, Whiteboard: [RC2+])

Crash Data

Attachments

(1 file)

It's #10 or so on MacOSX.

Example crash report:
bp-dc44666b-2044-11dd-b6c8-001cc45a2ce4
Attached patch Patch rev. 1Splinter Review
I haven't tried to reproduce the crash myself, but looking at the
code I'm guessing the problem is the same as in bug 402505.
Retaining 'self' and null-checking 'mGeckoChild' should fix the
crash.  Also, break out of the loop to reach ::ReleaseEvent(cloneEvent)
before returning.
Attachment #320627 - Flags: review?(joshmoz)
Sorry, this was a careless mistake on my part :-(

Thanks for catching it, Mats.

I suspect it's too late to block RC1 for this, but it should be
included in RC2 (if there is one).

This patch is (basically) no-risk, and fixes a fairly serious problem.
Flags: blocking1.9?
Whiteboard: RC2?
(In reply to comment #2)
> Sorry, this was a careless mistake on my part :-(
> 
> Thanks for catching it, Mats.
> 
> I suspect it's too late to block RC1 for this, but it should be
> included in RC2 (if there is one).
> 

Does it require us to spin an RC2?

> This patch is (basically) no-risk, and fixes a fairly serious problem.

(basicially) No-risk can only mean automated or manual test coverage for all possible code paths, plus data showing this doesn't introduce any leaks (kungfudeathgrip in there) or change perf.  Do we have any of those?

> Does it require us to spin an RC2?

No, I don't think so.

> Do we have any of those?

nsAutoRetainCocoaObject kungFuDeathGrip() is used in quite a few other places, has been used for some time (a couple of months if I remember right), and has introduced no problems that I'm aware of (leaks or perf problems).

But no, there's no Cocoa-widget-specific test coverage.


By the way, I found 22 instances of this crash in the last two weeks:

http://crash-stats.mozilla.com/report/list?range_unit=days&query_search=signature&query_type=exact&platform=mac&branch=1.9&signature=-%5BChildView+processPluginKeyEvent%3A%5D&query=-%5BChildView+processPluginKeyEvent%3A%5D&range_value=14

We'll have to see what happens when RC1 is released ... but so far this probably isn't a topcrasher.
(In reply to comment #5)
> By the way, I found 22 instances of this crash in the last two weeks:
> 
> http://crash-stats.mozilla.com/report/list?range_unit=days&query_search=signature&query_type=exact&platform=mac&branch=1.9&signature=-%5BChildView+processPluginKeyEvent%3A%5D&query=-%5BChildView+processPluginKeyEvent%3A%5D&range_value=14
> 
> We'll have to see what happens when RC1 is released ... but so far this
> probably isn't a topcrasher.
> 

Ok thanks - really helpful.  I'm going to take this off the nomination list.  Has [RC2?] on the whiteboard so we'll catch it if we need to do an RC2.  
Flags: wanted-next+
Flags: blocking1.9?
Flags: blocking1.9-
Whiteboard: RC2? → [RC2?]
FWIW, this crash accounts for roughly half of Camino's trunk Talkback (the other half is bug 433644), so we'll need it fixed before we do a Camino release off of 1.9.
Attachment #320627 - Flags: review?(joshmoz) → review+
Attachment #320627 - Flags: superreview?(roc)
roc, sr please? (in case there is a RC2)
FWIW, it's currenty at #12 on the "Firefox 3.0" top crash list
for the last 2 weeks, with 389 reported crashes in that time period.
Attachment #320627 - Flags: superreview?(roc) → superreview+
Comment on attachment 320627 [details] [diff] [review]
Patch rev. 1

Low-risk crash fix.
Attachment #320627 - Flags: approval1.9?
Comment on attachment 320627 [details] [diff] [review]
Patch rev. 1

a=beltzner, please land on the cvs root asap
Attachment #320627 - Flags: approval1.9? → approval1.9+
Whiteboard: [RC2?] → [RC2+]
Landed on CVS trunk for RC2 / 3.0.1:
mozilla/widget/src/cocoa/nsChildView.mm 	1.357 

Keeping bug open until mozilla-central opens for checkins.
Whiteboard: [RC2+] → [RC2+][fixed-1.9.0]
Keywords: fixed1.9
Whiteboard: [RC2+][fixed-1.9.0] → [RC2+]
we are going to auto-merge before mozilla-central opens, no need to leave this bug open for a landing on mozilla-central
Ok, thanks.

-> FIXED
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9
Crash Signature: [@ -[ChildView processPluginKeyEvent:] ]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: