Bail out if DispatchWindowEvent() causes this widget to be destroyed. b=433432 r=joshmoz sr=roc a1.9=beltzner